--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>Quiz</title>
 </head>
+    <nav>
+<a href="#scores">View Scores</a>
+<a>Time Remaining:</a>
+    </nav>
+
 <body>
-    
+    <section>
+    <h1>Coding Quiz Challenge</h1>
+
+    <button id="take quiz">Start</button>
+
+    </section>
+
+    <script src="./script.js"></script>
 </body>
 </html>
